Fixed some names

--- a/recipes/dal_pakoda.html
+++ b/recipes/dal_pakoda.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>dosa</h1>
+    <h1>Dal Pakoda</h1>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ4XXt3DLO0F-lLPRpcQVIAb9akSK5PMbAoUA&usqp=CAU" alt="dal_pakoda">
     <h2>Description</h2>
     <p>Dal pakoda, also known as lentil fritters, is a popular Indian snack made by deep-frying spiced and seasoned lentil batter. It's a delightful and crispy treat that can be enjoyed with chutneys or sauces. The primary ingredient for making dal pakoda is usually chana dal (split chickpeas), though variations may include other lentils like moong dal (split green gram).</p>
