--- a/recipes/dosa.html
+++ b/recipes/dosa.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>dosa</h1>
+    <h1>Plain Dosa</h1>
     <img src = "https://static.toiimg.com/thumb/63841432.cms?imgsize=1151127&width=800&height=800" alt="dosa
     ">
     <h2> Description</h2>
